--- a/webapp/app/partials/models/models_tree.html
+++ b/webapp/app/partials/models/models_tree.html
@@ -52,7 +52,7 @@
   <div>
     <h3 class="text-info">Models</h3>
   </div>
-    <div style="width:100%; height:{{window}}px; overflow:auto;margin-top: 20px;" ng-controller="ModelsCtrl">
+    <div style="width:100%; height:{{window}}px; overflow:auto;margin-top: 20px;">
 
         <ul class="list-group models-tree">
           <li class="list-group-item" ng-repeat="model in modelsManager.models">
