--- a/website/_layouts/docs-cn.html
+++ b/website/_layouts/docs-cn.html
@@ -29,7 +29,9 @@
 					<div id="container">
 						<div id="pjax">
 							<h1 class="post-title">{{ page.title }}</h1>
+							<article class="post-content" >
 							{{ content }}
+							</article>
 						</div>
 					</div>
 				</div>
