--- a/website/_layouts/docs.html
+++ b/website/_layouts/docs.html
@@ -32,9 +32,10 @@
 							{% if page.version == NULL %}
 							{% else %}							
 								<p>version: {{page.version}}, since: {{page.since}}</p>
-							{% endif %}	
-
+							{% endif %}
+							<article class="post-content" >	
 							{{ content }}
+							</article>
 						</div>
 					</div>
 				</div>
