KYLIN-1042, [Data Source]support create Table Schema from Streaming Source Record

--- a/webapp/app/less/app.less
+++ b/webapp/app/less/app.less
@@ -661,3 +661,8 @@ ul.messenger .messenger-message-inner,.ngCellText {
   -o-transition: width 0.5s;;
   transition: width 0.5s;;
 }
+
+.form-group.required .control-label:after {
+  content:"*";
+  color:red;
+}
