--- a/webapp/app/less/component.less
+++ b/webapp/app/less/component.less
@@ -996,3 +996,7 @@ ul.abn-tree li.abn-tree-row a{
 .sweet-alert .lead.text-muted{
   word-break:break-all;
 }
+
+.modal-body.streaming-source .ace_editor{
+  height: 600px !important;
+}
