KYLIN-1036, Code Clean

--- a/webapp/app/partials/tables/source_table_tree.html
+++ b/webapp/app/partials/tables/source_table_tree.html
@@ -38,8 +38,7 @@
                      dirSelection="true"
                      tree-model="tableModel.selectedSrcDb"
                      options="tableModel.treeOptions"
-                     on-selection="showSelected(node)"
-                     selected-node="selectedNode(node)">
+                     on-selection="showSelected(node)">
             {{node.name}} {{!!(node.datatype)?'(' + trimType(node.datatype) + ')' : ''}}
         </treecontrol>
     </div>
