--- a/website/_layouts/blog.html
+++ b/website/_layouts/blog.html
@@ -29,7 +29,9 @@
 
 		<div class="container">
 			<div>
+				<article class="post-content" >	
 				{{ content }}
+				</article>
 			</div>
 		</div>		
 		{% include footer.html %}
