--- a/webapp/app/partials/tables/source_table_tree.html
+++ b/webapp/app/partials/tables/source_table_tree.html
@@ -45,3 +45,5 @@
         <div no-result ng-if="tableModel.selectedSrcDb.length == 0"></div>
     </div>
 </div>
+
+<div ng-include="'partials/tables/table_load.html'"></div>
