KYLIN-1069, update tip for 'Partition Column' on UI

--- a/webapp/app/partials/cubeDesigner/incremental.html
+++ b/webapp/app/partials/cubeDesigner/incremental.html
@@ -83,7 +83,7 @@
                     <div class="col-xs-12">
                         <ol class="text-info">
                             <li>Not required,leave as default if this cube always need full build</li>
-                            <li>Partition column will select 'date' or 'string' type column from fact table</li>
+                            <li>Partition column will select 'date' type column from fact table</li>
                             <li>If column selected,please indicate start date to just pull certain data from source</li>
                         </ol>
                     </div>
