KYLIN-389, could not edit cube name after created

--- a/webapp/app/partials/cubeDesigner/info.html
+++ b/webapp/app/partials/cubeDesigner/info.html
@@ -46,7 +46,7 @@
                         <b>Cube Name</b>
                     </label>
                     <div class="col-xs-12 col-sm-6" ng-class="{'has-error':forms.cube_info_form.cube_name.$invalid && (forms.cube_info_form.cube_name.$dirty||forms.cube_info_form.cube_name.$sbumitted)}">
-                        <input ng-if="state.mode=='edit'" name="cube_name" type="text" class="form-control"
+                        <input ng-if="state.mode=='edit'" ng-disabled="{{isEdit}}"  name="cube_name" type="text" class="form-control"
                                ng-model="cubeMetaFrame.name" required
                                placeholder="You can use letters, numbers, and '_'"
                                ng-maxlength=100 ng-pattern="/^\w+$/" />
@@ -98,8 +98,9 @@
                 <div class="row">
                     <div class="col-xs-12">
                         <ol class="text-info">
-                            <li>Cube must belong to project which you have privilege to create</li>
                             <li>Cube name is unique name of entire system</li>
+                            <li>Can not edit cube name after created</li>
+                            <li>Cube must belong to project which you have privilege to create</li>
                         </ol>
                     </div>
                 </div>
