--- a/webapp/app/partials/modelDesigner/conditions_settings.html
+++ b/webapp/app/partials/modelDesigner/conditions_settings.html
@@ -73,6 +73,25 @@
             </div>
         </div>
 
+
+        <!--Date Format-->
+        <div class="form-group">
+          <div class="row">
+            <label class="control-label col-xs-12 col-sm-3 no-padding-right font-color-default"><b>Date Format</b></label>
+            <div class="col-xs-12 col-sm-6">
+              <select style="width: 100%" chosen
+                      ng-required="modelsManager.selectedModel.partition_desc.partition_date_format"
+                      ng-model="modelsManager.selectedModel.partition_desc.partition_date_format"
+                      ng-if="state.mode=='edit'"
+                      data-placement=""
+                      ng-options="ddt as ddt for ddt in cubeConfig.partitionDateFormatOpt">
+                <option value="">--Select Date Format--</option>
+              </select>
+              <span ng-if="state.mode=='view'&&modelsManager.selectedModel.partition_desc.partition_date_column">{{(modelsManager.selectedModel.partition_desc.partition_date_format)}}</span>
+            </div>
+          </div>
+        </div>
+
           <div class="form-group" ng-show="userService.hasRole('ROLE_ADMIN')">
               <div class="row">
                   <label class="control-label col-xs-12 col-sm-3 no-padding-right font-color-default"><b>Cube Size</b></label>
