update web footer to remove google group

--- a/webapp/app/partials/footer.html
+++ b/webapp/app/partials/footer.html
@@ -20,8 +20,8 @@
     <div class="container">
         <div class="copyright">
             <span>
-                <a href="http://kylin.io" style="color:#808080;"><i class="fa fa-home"></i> Home Page</a> |
-                <a href="https://groups.google.com/forum/#!forum/kylin-olap" style="color:#808080;"><i class="fa fa-users"></i> Google Group</a>
+                <a href="http://kylin.apache.org" style="color:#808080;"><i class="fa fa-home"></i> Apache Kylin</a> |
+                <a href="http://kylin.apache.org/community/" style="color:#808080;"><i class="fa fa-users"></i> Apache Kylin Community</a>
             </span>
         </div>
     </div>
