KYLIN-1128 clone cube metadata

--- a/webapp/app/less/app.less
+++ b/webapp/app/less/app.less
@@ -312,6 +312,10 @@ body .modal-dialog {
   margin-right:auto;
 }
 
+.clone-cube-window .modal-dialog {
+  width: 600px; /* desired relative width */
+}
+
 pre {
   width: inherit;
   height: 350px;
