upgrade website content from incubator-kylin to kylin

--- a/website/_includes/head.cn.html
+++ b/website/_includes/head.cn.html
@@ -55,11 +55,11 @@
 
   //oringal tracker for kylin.io
   ga('create', 'UA-55534813-1', 'auto');
-  //new tracker for kylin.incubator.apache.org
-  ga('create', 'UA-55534813-2', 'auto', {'name':'incubator'});
+  //new tracker for kylin.apache.org
+  ga('create', 'UA-55534813-2', 'auto', {'name':'toplevel'});
 
   ga('send', 'pageview');
-  ga('incubator.send', 'pageview');
+  ga('toplevel.send', 'pageview');
 
 
 </script>
