--- a/website/_includes/footer.html
+++ b/website/_includes/footer.html
@@ -17,32 +17,26 @@
 -->
 
 <footer id="underfooter">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12 widget" >
-        <div class="widget-body" style="text-align:center">
-          <div>
-          Apache Kylin is an effort undergoing incubation at The Apache Software Foundation (ASF), sponsored by the Apache Incubator. Incubation is required of all newly accepted projects until a further review indicates that the infrastructure, communications, and decision making process have stabilized in a manner consistent with other successful ASF projects. While incubation status is not necessarily a reflection of the completeness or stability of the code, it does indicate that the project has yet to be fully endorsed by the ASF.
-          </div>
-        <a href="http://www.apache.org">
-            <img id="asf-logo" alt="Apache Software Foundation" src="/assets/images/feather-small.gif">
-        </a>
-        <a href="http://incubator.apache.org/">
-            <img id="incubator-logo" alt="Apache Incubator" src="/assets/images/egg-logo.png">
-        </a>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 widget">
+                <div class="widget-body" style="text-align:center">
+                    <a href="http://www.apache.org">
+                        <img id="asf-logo" alt="Apache Software Foundation" src="/assets/images/feather-small.gif">
+                    </a>
 
-        <div id="copyright">
-            <p>Copyright &#169; 2014 The Apache Software Foundation, Licensed under the <a
-                    href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>.<br/>Apache, the
-                Apache feather logo, and the Apache Incubator project logo are trademarks of The Apache Software
-                Foundation.</p>
+                    <div>
+                        The contents of this website are © 2015 Apache Software Foundation under the terms of the <a
+                            href="http://www.apache.org/licenses/LICENSE-2.0"> Apache License v2 </a>. Apache Kylin and
+                        its logo are trademarks of the Apache Software Foundation.
+                    </div>
+
+                </div>
+            </div>
         </div>
-        </div>
-      </div>
+        <!-- /row of widgets -->
+
     </div>
-    <!-- /row of widgets --> 
+    <div></div>
 
-  </div>
-  <div></div>
-  
 </footer>
