--- a/website/_includes/header.html
+++ b/website/_includes/header.html
@@ -52,7 +52,7 @@
           <li><a href="/blog">Blog</li>
           <li><a href="/cn" >中文版</a></li>  
           <li><a href="https://twitter.com/apachekylin" target="_blank" class="fa fa-twitter fa-lg" title="Twitter: @ApacheKylin" ></a></li>
-          <li><a href="https://github.com/apache/incubator-kylin" target="_blank" class="fa fa-github-alt fa-lg" title="Github: apache/incubator-kylin" ></a></li>          
+          <li><a href="https://github.com/apache/kylin" target="_blank" class="fa fa-github-alt fa-lg" title="Github: apache/kylin" ></a></li>          
           <li><a href="https://www.facebook.com/kylinio" target="_blank" class="fa fa-facebook fa-lg" title="Facebook: kylin.io" ></a></li>   
       </ul>      
     </div><!-- /.navbar-collapse -->
