minor, update hyperlinks for kylin contacts on webapp
Signed-off-by: honma <honma@ebay.com>

--- a/webapp/app/partials/login.html
+++ b/webapp/app/partials/login.html
@@ -56,7 +56,7 @@
                                 </div>
                                 <div class="space"></div>
                                 <div class="form-group">
-                                    <a href="https://groups.google.com/forum/#!forum/kylin-olap" target="_blank" class="text-muted">Login Issue?</a>
+                                    <a href="http://kylin.apache.org/community/" target="_blank" class="text-muted">Login Issue?</a>
                                     <button class="pull-right btn btn-sm btn-primary" type="submit" ng-disabled="login_form.$invalid">
                                         <i class="ace-icon fa fa-key"></i>
                                         <span class="bigger-110">{{loading? 'Logging In...': 'Log In'}}</span>
