--- a/website/_includes/header.html
+++ b/website/_includes/header.html
@@ -19,7 +19,7 @@
 <header id="header" >
   
   <div id="head" class="parallax" parallax-speed="3" >
-    <div id="logo" class="text-center"> <img class="img-circle" id="circlelogo" src="{{ "/assets/images/kylin_logo.jpg"| prepend: site.baseurl }}"> <span class="title" >Apache Kylin</span> <span class="tagline">Extreme OLAP Engine for Big Data</span> 
+    <div id="logo" class="text-center"> <img class="img-circle" id="circlelogo" src="{{ "/assets/images/kylin_logo.jpg"| prepend: site.baseurl }}"> <span class="title" >Apache Kylin™</span> <span class="tagline">Extreme OLAP Engine for Big Data</span> 
     </div>
   </div>
   
