--- a/website/_layouts/blog.html
+++ b/website/_layouts/blog.html
@@ -23,7 +23,7 @@
 		<div class="page-content">
 			<header style=" padding:2em 0 0 0">
 			<div class="container" >
-				<h4 class="section-title"><span>Kylin Technical Blog</span></h4>
+				<h4 class="section-title"><span>Apache Kylin™ Technical Blog</span></h4>
 			</div>
 		</div>
 
