--- a/website/_layouts/download.html
+++ b/website/_layouts/download.html
@@ -32,7 +32,7 @@
             <div id="zero" class=" main" >
               <header style=" padding:2em 0 0 0">
                 <div class="container" >
-                  <h4 class="section-title"><span>Kylin Download</span></h4>
+                  <h4 class="section-title"><span>Apache Kylin™ Download</span></h4>
                 </div>
               </header>
                 {{ content }}
