KYLIN-930 list project realizations,detail point to models page

--- a/webapp/app/partials/projects/project_detail.html
+++ b/webapp/app/partials/projects/project_detail.html
@@ -42,7 +42,7 @@
                     <tbody>
                         <tr ng-repeat="item in project.realizations" ng-if="item.type=='CUBE'">
                             <td>{{item.realization}}</td>
-                            <td><a href='cubes/{{project.name}}/{{item.realization}}' style="color: #428BCA">Detail</a></td>
+                            <td><a href='models' style="color: #428BCA">Detail</a></td>
                         </tr>
                     </tbody>
                 </table>
