--- a/webapp/app/partials/cubeDesigner/measures.html
+++ b/webapp/app/partials/cubeDesigner/measures.html
@@ -142,13 +142,22 @@
                                   <span class="font-color-default"
                                       ng-if="newMeasure.function.parameter.type == 'constant'"
                                       ng-init="newMeasure.function.parameter.value = 1"><b>&nbsp;&nbsp;1</b></span>
-                                  <select class="form-control" chosen
-                                      ng-if="newMeasure.function.parameter.type == 'column'"
-                                      ng-model="newMeasure.function.parameter.value"
-                                      ng-change="measureReturnTypeUpdate();"
-                                      ng-options="columns.name as columns.name for columns in getMetricColumnsByTable(metaModel.model.fact_table)" >
-                                      <option value="">-- Select a Fact Table Column --</option>
-                                  </select>
+                                <!--!COUNT_DISTINCT-->
+                                <select class="form-control" chosen
+                                        ng-if="newMeasure.function.parameter.type == 'column' && newMeasure.function.expression!=='COUNT_DISTINCT'"
+                                        ng-model="newMeasure.function.parameter.value"
+                                        ng-change="measureReturnTypeUpdate();"
+                                        ng-options="column as column for column in getCommonMetricColumns()" >
+                                  <option value="">-- Select a Column --</option>
+                                </select>
+                                <!--COUNT_DISTINCT-->
+                                <select class="form-control" chosen
+                                        ng-if="newMeasure.function.parameter.type == 'column' && newMeasure.function.expression=='COUNT_DISTINCT'"
+                                        ng-model="newMeasure.function.parameter.value"
+                                        ng-change="measureReturnTypeUpdate();"
+                                        ng-options="column as column for column in getMetricColumns()" >
+                                  <option value="">-- Select a Column --</option>
+                                </select>
                               </div>
                           </div>
                       </div>
