KYLIN-1211 Add 'Enable Cache' button in System page

--- a/webapp/app/partials/admin/admin.html
+++ b/webapp/app/partials/admin/admin.html
@@ -59,7 +59,12 @@
                 <label tooltip="Disable Query Cache" style="cursor: pointer;">Disable Cache</label>
             </button>
         </div>
-        <div style="padding-top: 10px;width: 180px;">
+      <div style="padding-top: 10px;width: 180px;">
+        <button class="btn btn-primary btn-lg btn-block" ng-click="enableCache()">
+          <label tooltip="Disable Query Cache" style="cursor: pointer;">Enable Cache</label>
+        </button>
+      </div>
+      <div style="padding-top: 10px;width: 180px;">
             <button class="btn btn-primary btn-lg btn-block" ng-click="toSetConfig()">
                 <label tooltip="Update Server Config" style="cursor: pointer;">Set Config</label>
             </button>
