KYLIN-1244 In query window, enable fast copy&paste by double clicking tables/columns' names.

--- a/webapp/app/partials/query/query.html
+++ b/webapp/app/partials/query/query.html
@@ -68,7 +68,8 @@
                     </section>
 
                     <p class="blue">
-                        Tips: Ctrl+Shift+Space or Alt+Space(Windows), Command+Option+Space(Mac) to list tables/columns in query box.
+                        Tips: Ctrl+Shift+Space or Alt+Space(Windows), Command+Option+Space(Mac) to list tables/columns in query box.<br>
+                      &emsp;&emsp;&emsp;Double click tables/columns' names on the left to fast copy&paste.
                     </p>
                     <div class="pull-left">
                         <h4>
