KYLIN-1244 In query window, enable fast copy&paste by double clicking tables/columns' names.

--- a/webapp/app/partials/projects/project_table_tree.html
+++ b/webapp/app/partials/projects/project_table_tree.html
@@ -30,6 +30,7 @@
                 icon-leaf         = "fa fa-columns"
                 icon-expand       = "fa fa-database"
                 icon-collapse     = "fa fa-database"
+                on-dblclick   = "doubleClick(branch)"
                 expand-level      = "3">
         </abn-tree>
 
